@@ -5,7 +5,7 @@ AC_CANONICAL_SYSTEM
 AC_EXEEXT
 
 PACKAGE=mbuffer
-VERSION=20091110
+VERSION=20091122
 
 if test "${LD_LIBRARY_PATH}" != "" ; then
 	echo ""
@@ -32,19 +32,50 @@ AC_C_INLINE
 AC_PROG_INSTALL
 AC_PATH_PROG(RM,rm)
 
-test "${USRCFLAGS}" = "" -a "${GCC}" = "yes" && CFLAGS="-g -O2 -Wall"
-test "${USRCFLAGS}" = "" -a "${GCC}" != "yes" && CFLAGS="-g -O"
-AC_SUBST(CFLAGS)
 
-cflags_tmp="$CFLAGS"
-CFLAGS=-m64
-AC_MSG_CHECKING([whether CC supports -m64])
-AC_RUN_IFELSE([AC_LANG_PROGRAM([])],
-    [AC_MSG_RESULT([yes])]
-    cflags_tmp="$cflags_tmp -m64",
-    [AC_MSG_RESULT([no])]
-)
-CFLAGS="$cflags_tmp"
+if test "${GCC}" = "yes" ; then
+	test "${USRCFLAGS}" = "" && CFLAGS="-g -O2 -Wall"
+	cflags_tmp="$CFLAGS"
+	CFLAGS="-m64"
+	AC_MSG_CHECKING([whether $CC supports $CFLAGS])
+	AC_RUN_IFELSE([AC_LANG_PROGRAM([])],
+		[AC_MSG_RESULT([yes])],
+		[AC_MSG_RESULT([no])]
+		CFLAGS=""
+	)
+else
+	SUNCCVERSION=`${CC} -V 2>&1 | grep Sun`
+	SUNCC=$?
+	if test "${SUNCC}" == "0" ; then
+		test "${USRCFLAGS}" = "" && CFLAGS="-g -O"
+		cflags_tmp="$CFLAGS"
+		HAS_M64=`${CC} -flags | grep m64`
+		if test "${HAS_M64}" != "" ; then
+			CFLAGS="-m64"
+			AC_MSG_CHECKING([whether $CC supports $CFLAGS])
+			AC_RUN_IFELSE([AC_LANG_PROGRAM([])],
+				[AC_MSG_RESULT([yes])],
+				[AC_MSG_RESULT([no])]
+				CFLAGS=""
+			)
+		else
+			CFLAGS="-xarch=generic64"
+			AC_MSG_CHECKING([whether $CC supports $CFLAGS])
+			AC_RUN_IFELSE([AC_LANG_PROGRAM([])],
+				[AC_MSG_RESULT([yes])],
+				[AC_MSG_RESULT([no])]
+				CFLAGS=""
+			)
+		fi
+	else
+		echo unknown cc
+		test "${USRCFLAGS}" = "" && CFLAGS="-g -O"
+		cflags_tmp="$CFLAGS"
+	fi
+fi
+
+CFLAGS="$cflags_tmp $CFLAGS"
+AC_SUBST(CFLAGS)
 
 
 AC_HEADER_ASSERT
@@ -62,7 +93,6 @@ AC_SYS_LARGEFILE
 AC_STRUCT_ST_BLKSIZE
 AC_SEARCH_LIBS(socket,socket,,AC_MSG_ERROR(could not find the library containing network functions!))
 AC_SEARCH_LIBS(gethostbyname,nsl,,AC_MSG_ERROR(could not find the library containing name convertion functions!))
-#AC_SEARCH_LIBS(hstrerror,resolv,,AC_MSG_ERROR(could not find the library containing hstrerror))
 AC_CHECK_LIB(resolv,hstrerror)
 AC_SEARCH_LIBS(sendfile,sendfile,AC_DEFINE(HAVE_SENDFILE,1,libsendfile is available),)
 AC_CHECK_HEADER(sys/sendfile.h,AC_DEFINE(HAVE_SENDFILE_H,1,sendfile in sendfile.h),)
