@@ -1,3 +1,10 @@
+20091122:
+- fix superfluous ai_flags causing error on Solaris 8
+- fix assertion failure after rejected connection
+- configure fix for 64-bit builds
+- minor lint cleanup
+- added workaround for cancellation issues on Solaris 8/9
+
 20091110:
 - fix SIGINT hanging when input is idle
 - several IPv6 fixes
